# framerat

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  get_build_artefacts_appveyor.ps1  install-framerat.sh
framerat/: CMakeLists.txt  Framerat.cpp  Framerat.hpp
framerat/core/: Core.cpp  Core.hpp
framerat/core/rendering/: Context.cpp  Context.hpp  Rendering.cpp  Rendering.hpp  RenderingContext.cpp  RenderingContext.hpp  RenderingTarget.cpp  RenderingTarget.hpp  Target.cpp  Target.hpp
framerat/core/rendering/enums/: Enums.hpp  RenderingBackend.hpp  RenderingMode.hpp
framerat/core/rendering/opengl/: OpenGL.cpp  OpenGL.hpp  OpenGLRenderingContext.cpp  OpenGLRenderingContext.hpp
framerat/core/rendering/vulkan/: Vulkan.cpp  Vulkan.hpp  VulkanRenderingContext.cpp  VulkanRenderingContext.hpp
framerat/core/windowing/: Window.cpp  Window.hpp  Windowing.cpp  Windowing.hpp
framerat/core/windowing/events/: BaseEvent.cpp  BaseEvent.hpp  Events.cpp  Events.hpp
framerat/core/windowing/events/dispatcher/: Dispatcher.cpp  Dispatcher.hpp
framerat/core/windowing/events/enums/: Enums.hpp
framerat/core/windowing/events/listener/: BaseEventListener.cpp  BaseEventListener.hpp  (+2 more)
framerat/core/windowing/factory/: Factory.cpp  Factory.hpp  WindowFactory.cpp  WindowFactory.hpp
framerat/util/: Util.cpp  Util.hpp
framerat/util/threading/: Threading.cpp  Threading.hpp  Threadpool.cpp  Threadpool.hpp  ThreadpoolExecutor.cpp  ThreadpoolExecutor.hpp  ThreadpoolExecutorService.cpp  ThreadpoolExecutorService.hpp
(+17 files in other folders)
